--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ em {
         }
         
         h1 {
-            color: #8c3c2d;
+            color: #4d4e63;
             font-size: 3.6rem;
             margin-bottom: 25px;
             /* Cambiado a Roboto 900 (Black) */
@@ -289,7 +289,7 @@ em {
         }
         
         .section-text {
-            font-size: 1.2rem;
+            font-size: 1.1rem;
             color: #444;
             line-height: 1.8;
             margin-bottom: 25px;
